setSelectedIndexes doesn't
forgot docs
Case: SVY-2783